shared/src/commonMain/kotlin/com/example/osmapi/core/common/errors/OsmServiceUnavailableException.kt
package com.example.osmapi.core.common.errors

class OsmServiceUnavailableException :OsmConnectionException(){
}